deployments/workloads/media/gluetun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun-deployment
  labels:
    app: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: curl-container
          image: curlimages/curl
          command:
            [
              "sh",
              "-c",
              "while true; do curl -x socks5://test:test@localhost:1080 http://example.com; sleep 5; done",
            ]

        - name: socks5
          image: serjs/go-socks5-proxy
          ports:
            - containerPort: 1080
      volumes:
        - name: wireguard-private-key
          secret:
            secretName: wireguard-private-key
