deployments/workloads/media/gluetun/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "qbittorrent"
spec:
  endpointSelector:
    matchLabels:
      app: qbittorrent
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "6881"
              protocol: ANY
